--- a/oopsla2016.sty
+++ b/oopsla2016.sty
@@ -11,17 +11,17 @@
   }
   \@setflag \@preprint = \@true
 
-  %% Copy-paste from sigplanconf
-  %% \def \ps@plain {%
-  %% \let \@mkboth = \@gobbletwo
-  %% \let \@evenhead = \@empty
-  %% \def \@evenfoot {\scriptsize
-  %%                  \rlap{\textit{\@preprintfooter}}\hfil
-  %%                  \thepage \hfil
-  %%                  \llap{\textit{\@formatyear}}}%
-  %% \let \@oddhead = \@empty
-  %% \let \@oddfoot = \@evenfoot}
-  \sigplanfooter
+  %% Copy-paste from sigplanconf until they expose this as a command
+  \def \ps@plain {%
+  \let \@mkboth = \@gobbletwo
+  \let \@evenhead = \@empty
+  \def \@evenfoot {\scriptsize
+                   \rlap{\textit{\@preprintfooter}}\hfil
+                   \thepage \hfil
+                   \llap{\textit{\@formatyear}}}%
+  \let \@oddhead = \@empty
+  \let \@oddfoot = \@evenfoot}
+  %%\sigplanfooter
 
 }
 
