--- a/oopsla2015-template.tex
+++ b/oopsla2015-template.tex
@@ -21,7 +21,7 @@
 %-----------------------------------------------------------------------------
 
 
-\documentclass{sigplanconf}
+\documentclass[10pt]{sigplanconf}
 \usepackage[1stsubmission]{oopsla2015}
 
 % The following oopsla2015 options are available:
