--- a/oopsla2016-template.tex
+++ b/oopsla2016-template.tex
@@ -22,9 +22,9 @@
 
 
 \documentclass[10pt]{sigplanconf}
-\usepackage[1stsubmission]{oopsla2015}
+\usepackage[1stsubmission]{oopsla2016}
 
-% The following oopsla2015 options are available:
+% The following oopsla2016 options are available:
 %
 % 1stsubmission   For the initial submission
 % 2ndsubmission   For the 2nd submission
@@ -36,7 +36,7 @@
 \begin{document}
 
 \copyrightdata{978-1-nnnn-nnnn-n/yy/mm} 
-\doi{nnnnnnn.nnnnnnn}
+%\doi{nnnnnnn.nnnnnnn}
 
 % Uncomment one of the following two, if you are not going for the 
 % traditional copyright transfer agreement.
