changed template to use "numbers" for citations

--- a/oopsla2016-template.tex
+++ b/oopsla2016-template.tex
@@ -21,7 +21,7 @@
 %-----------------------------------------------------------------------------
 
 
-\documentclass[10pt,nonatbib]{sigplanconf}
+\documentclass[10pt,numbers]{sigplanconf}
 \usepackage[1stsubmission]{oopsla2016}
 
 % The following oopsla2016 options are available:
